<resources>
    <string name="app_name">attendx</string>
    <string name="attendx">AttendX</string>
    <string name="version">1.0.0</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign Up</string>
    <string name="Password">Password</string>
    <string name="Conform_Password">Conform Password</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>

</resources>