<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".login_activity">

    <TextView
        android:id="@+id/login"
        style="@style/TEXT"
        android:layout_width="330dp"
        android:layout_height="76dp"
        android:layout_marginTop="80dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextText"
        style="@style/EDITTEXT"
        android:layout_marginTop="92dp"
        android:hint="@string/email"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/EDITTEXT"
        android:layout_marginTop="24dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginz"
        style="@style/BUTTON"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="@+id/sigin"
        app:layout_constraintEnd_toStartOf="@+id/sigin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sigin"
        style="@style/BUTTON"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>